	* src/mod_pubsub/node_default.erl: Likewise
	* src/mod_pubsub/node_pep.erl: Likewise
	* src/mod_pubsub/pubsub.hrl: Likewise

	* src/mod_pubsub/mod_pubsub.erl: prevent subscribing with full jid,
	waiting for full jid support (EJAB-701)

	* src/mod_pubsub/mod_pubsub.erl: use of delete-any feature instead of
	delete-nodes for delete item use case (fix from erroneous definition
	in XEP-0060)

2008-12-23  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Improve handling of PEP sent to
	external contacts (EJAB-825)
	* src/mod_caps.erl: Likewise

2008-12-19  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Fix send_last_published_item issue
	when running on clustered table (thanks to Vincent Barat)(EJAB-793)

2008-12-18  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Check option of the nodetree instead
	of checking configuration (thanks to Eric Cestari)(EJAB-737)

2008-12-17  Pablo Polvorin	<pablo.polvorin@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Fix bug in MUC invite.

2008-12-17  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Merge from trunk (r1730 to r1734).

2008-12-16  Badlop  <badlop@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Fix update pubsub tables from
	ejabberd 1.x to 2.x (EJAB-817)

	* doc/guide.tex: Fix capitalization of some section titles

	* doc/guide.tex: Mention as optional Requirements: mysql, pgsql
	and pam

	* src/ejabberd_admin.erl: Command reopen-log must also rotate
	sasl.log (thanks to Alexander Tsvyashchenko)(EJAB-711)
	* src/ejabberd_logger_h.erl: Export the function rotate_log/1
	* doc/guide.tex: Improve explanation of log files rotation

	* doc/guide.tex: Improve explanation of watchdog admins
	option: only useful for developers (EJAB-816)
	* src/ejabberd.cfg.example: Likewise

	* doc/guide.tex: Say 'higher' instead of 'newer' in requirements
	* README: Likewise
